--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/cyko.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tapori Chatbot</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Backhod Chatbot — Fun & Tapori Style AI Chatbot</title>
+  <meta name="title" content="Backhod Chatbot — Fun & Tapori Style AI Chatbot" />
+  <meta name="description"
+    content="Backhod Chatbot is a funny, tapori-style AI chatbot made for casual timepass and entertainment. Have casual, witty, and hilarious conversations anytime!" />
+  <meta name="keywords"
+    content="tapori chatbot, AI chatbot India, funny chatbot, backchod chatbot, casual AI conversation, tapori AI" />
+  <meta name="author" content="cykoravish" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="/cyko.jpg" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:title" content="Backhod Chatbot — Fun & Tapori Style AI Chatbot" />
+  <meta property="og:description"
+    content="Backhod Chatbot is a funny, tapori-style AI chatbot made for casual timepass and entertainment. Have casual, witty, and hilarious conversations anytime!" />
+  <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://tapori-chatbot-vitejs.onrender.com" />
+  <meta property="twitter:title" content="Backhod Chatbot — Fun & Tapori Style AI Chatbot" />
+  <meta property="twitter:description"
+    content="Backhod Chatbot is a funny, tapori-style AI chatbot made for casual timepass and entertainment. Have casual, witty, and hilarious conversations anytime!" />
+  <meta property="twitter:image" content="https://tapori-chatbot-vitejs.onrender.com/cyko.jpg" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://tapori-chatbot-vitejs.onrender.com" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
